kept fixed background on desktop and tablet/ipad, made it absolute on mobile

--- a/src/components/CircuitAnimation/CircuitAnimations.css
+++ b/src/components/CircuitAnimation/CircuitAnimations.css
@@ -33,7 +33,7 @@
 @media (max-width: 480px) {
   #svg1 {
 
-    position: fixed;
+    position: absolute;
     bottom: -50%;
     left: 45%;
     transform: translate(-50%, -50%);
